Fix nav spacing

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -17,3 +17,7 @@ a[itemprop="url"] {
 img {
   width: 100%;
 }
+
+nav {
+  margin-bottom: 1em;
+}
